--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,13 @@
 <h1>New User</h1>
 
 <h1> Sign up</h1>
+
+
 <%= form_for @user do |f| %>
+
+<%= f.label "Profile Photo" %>
+<%= f.file_field :avatar %>
+
 <%= f.label "name" %>
 <%= f.text_field :name %>
 <%= f.label "Email" %>
