--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,5 +15,11 @@
 <%= f.submit "Edit" %>
 <% end %>
 
+<%= form_for @user do |f| %>
+<%= f.label "Upload your photo here" %>
+<%= f.file_field :pictures, multiple: true %>
+<%= f.submit "Edit" %>
+<% end %>
+
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
